--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html> 
 <html> 
 <head> 
-  <title>蛋仔帝国中央政府</title> 
+  <title>蛋意志联邦共和国联邦政府</title> 
 </head> 
 <body> 
-  <h1>蛋仔帝国中央政府网站</h1>
-    
+  <h1>蛋意志联邦共和国联邦政府</h1>
+  <h2>热门新闻：根据蛋意志全国第五次联邦会议，新政府重要职务名单已发布，如以下链接：</h2>
+  
 </body> 
 </html>
